--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,7 @@ header {
 /* Code CSS en prévision de l'ajout d'un carousel pour la bannière */
 /* Gestion des fleches du carrousel */
 #banner .arrow {
-	position: absolute;
+	position: relative;
 }
 #banner .arrow_left {
 	left: 10px;
