--- a/assets/style.css
+++ b/assets/style.css
@@ -106,9 +106,8 @@ header {
 
 #banner {
 	display: flex;
-	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 	width: 100%;
 	min-height: 470px;
 	position: relative;
