creation des dots

--- a/assets/style.css
+++ b/assets/style.css
@@ -107,7 +107,7 @@ header {
 #banner {
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: center;
 	width: 100%;
 	min-height: 470px;
 	position: relative;
